--- a/tutorial .html
+++ b/tutorial .html
@@ -25,7 +25,7 @@
    <body id="top">
     <a href="#bottom">Back to bottom</a>
 
-    <p>This is a web page.</p>
+    <p>Hello this is a web page.</p>
 
 <h1>Heading Level 1</h1>
 <h2>Heading Level 2</h2>
